@@ -70,6 +70,9 @@ Yosys 0.9 .. Yosys 0.9-dev
     - Added "dfflegalize" pass
     - Added "_TECHMAP_CELLNAME_" parameter for "techmap" pass
     - Merged "dffsr2dff", "opt_rmdff", "dff2dffe", "dff2dffs", "peepopt.dffmux" passes into a new "opt_dff" pass
+    - Memory cell changes:
+      - $memwr cells now have PORTID parameter
+      - new partial-order PRIORITY_MASK parameter for $memwr cells, replacing total-order PRIORITY
 
 Yosys 0.8 .. Yosys 0.9
 ----------------------
